content/consul/v1.11.x/content/docs/api-gateway/configuration/meshservice.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Consul and the Consul logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/consul/blob/-/LICENSE

layout: docs
page_title: Consul API Gateway MeshService
description:  >-
  This topic describes how to configure the Consul API Gateway MeshService object
---

# MeshService

This topic provides full details about the `MeshService` resource.

## Introduction

A `MeshService` is a resource in the Kubernetes cluster that enables Kubernetes configuration models, such as `HTTPRoute` and `TCPRoute`, to reference services that only exist in Consul. A `MeshService` represents a service in the Consul service mesh outside the Kubernetes cluster where Consul API Gateway is deployed. The service represented by the `MeshService` resource must be in the same Consul datacenter as the Kubernetes cluster.


## Configuration Model

The following outline shows how to format the configurations in the `MeshService` object. Click on a property name to view details about the configuration.

* [`name`](#name): string | required


## Specification

This topic provides details about the configuration parameters.

### name
Specifies the name of the service in the Consul service mesh to send traffic to.
* Type: string
* Required: required
